prod/hgir/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: hgir
    tier: frontend
  name: hgir
  namespace: prod
  annotations:
    flux.weave.works/automated: 'true'
    flux.weave.works/tag.hgir: semver:~1.0
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hgir
        tier: frontend
    spec:
      imagePullSecrets:
      - name: registry-sdpakscr
      containers:
      - name: hgir
        image: sdpakscr.azurecr.io/hgir:1.0.22
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 50m
            memory: "100Mi"
          limits:
            cpu: 100m
            memory: "200Mi"
        volumeMounts:
        - mountPath: /data
          name: sqlite
      volumes:
      - name: sqlite
        persistentVolumeClaim:
          claimName: hgir-sqlite
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: hgir
    tier: database
  name: hgir-db
  namespace: prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hgir
        tier: database
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      imagePullSecrets:
      - name: registry-sdpakscr
      containers:
      - name: hgir-db
        image: postgres:10.2-alpine
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 50m
            memory: "100Mi"
          limits:
            cpu: 100m
            memory: "200Mi"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db
          subPath: postgres
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: hgir-db
