prod/hgir/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hgir-ingress
  namespace: prod
spec:
  tls:
  - hosts:
    - hgir.sdpaks.equinor.com
    secretName: hgir-tls
  rules:
    - host: hgir.sdpaks.equinor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hgir-frontend
                port:
                  number: 80
